// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageViewer ImageViewer base demo works fine 1`] = `
<base>
  <t-button
    block="{{true}}"
    size="large"
    theme="primary"
    variant="outline"
    bind:tap="onClick"
  >
    基础图片预览
  </t-button>
  <t-toast
    id="t-toast"
  />
  <t-image-viewer
    closeBtn="{{false}}"
    deleteBtn="{{false}}"
    images="{{Array []}}"
    showIndex="{{false}}"
    usingCustomNavbar="{{true}}"
    visible="{{false}}"
    bind:change="onChange"
    bind:close="onClose"
    bind:delete="onDelete"
  />
</base>
`;

exports[`ImageViewer ImageViewer delete demo works fine 1`] = `
<delete>
  <t-button
    block="{{true}}"
    size="large"
    theme="primary"
    variant="outline"
    bind:tap="onClick"
  >
    带操作图片预览
  </t-button>
  <t-action-sheet
    id="t-action-sheet"
  />
  <t-image-viewer
    closeBtn="{{false}}"
    deleteBtn="{{false}}"
    images="{{Array []}}"
    showIndex="{{false}}"
    usingCustomNavbar="{{true}}"
    visible="{{false}}"
    bind:change="onChange"
    bind:close="onClose"
    bind:delete="onDelete"
  />
</delete>
`;
